# Curso-FastAPI-dunossauro

./: .gitignore  README.md  pyproject.toml
fastapi_zero/: app.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  users.py
migration/: env.py
migration/versions/: 13de7ab0a234_exercicio_02_aula_04.py  bcd1aad84797_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
